Updated minimum java version (11) Updated code in database section Updated git ignore